Adder Google and Wine API error handling Modified Read me for running on local drive Load Google API last

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     height: 500px;
 }
 .JumboBackground {
-    background-image: url(/images/FingerLakesVineyard1.png);
+    background-image: url(../images/FingerLakesVineyard1.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
